[package]
name = "my-hyper"
version = "0.1.0"
authors = ["Bill Barekas <bbarekas@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "1.0"
async-trait = "0.1"
